# autoria_scrapper

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  compose.yaml  env_utils.py  main.py  pyproject.toml
app/: models.py  scheduler.py  scrapper.py
database/: database_saver.py  session.py
